cleaned up garbage and refined stuff

--- a/example.tex
+++ b/example.tex
@@ -1,5 +1,5 @@
 % Example LaTeX document for testing AutoTeX
-% Try typing rough draft text below and pressing Enter 3 times
+% Try typing rough draft text below and pressing Shift twice
 
 \documentclass{article}
 \usepackage{amsmath}
@@ -14,7 +14,7 @@ This is a formatted LaTeX section. Below you can type rough draft notes.
 
 % Try typing something like:
 % "solve for x: 2x + 5 = 15"
-% Then press Enter 3 times to see it convert!
+% Then press Shift twice to see it convert!
 
 
 
